# text-editor

./: Cargo.toml  README.md
examples/: empty_app.rs  text_editor.rs
src/: history.rs  lib.rs  selection.rs  text_editor.rs
